# VSB

./: .gitignore  README.md
alg1/project/: CMakeLists.txt  main.cpp  zadani.txt
alg1/ukol_1/: main  main.c
alg1/ukol_2/: stack.cpp  test.html
alg1/ukol_3/: input.txt
alg1/ukol_5/: brute_force.cpp
alg1/ukol_6/: brute_force2.cpp
alg1/ukol_7/: binaryTree
alg1/ukol_8/: sort
algI/BAI0033-1/: main.cpp
algI/project/: doxy  project
algI/ukol_2/: main.cpp  main1
algI/ukol_3/: main  main.cpp
algI/ukol_5/: kotův_úd.cpp  main.cpp
algI/ukol_7/: CMakeLists.txt  binary.cpp
algI/ukol_8/: CMakeLists.txt  main.cpp
algII/BAI0033-HEIGHTMAP-CZ/: Axis_enum.h  CMakeLists.txt  Column.cpp  Column.h  Faces_enum.h  HeightMap.cpp  HeightMap.h  (+5 more)
cpp/26_2/current/: CMakeLists.txt  api_design.cpp  enums.cpp  packing.cpp  structures.cpp  structures.h
cpp/zaklady/current/: CMakeLists.txt  basics.cpp  modularization.cpp
dim/: BAI0033_zadaní1.odt  DIM_projekt_ZS.tex
dsI/: agregacni_funkce_a_shlukovani.sql  lab01.sql  opravaDatabze.sql  poddotazy.sql  spojovani_tabulek.sql  zaklady_sql.sql
dsII/: cv02.sql  cv03.sql  cv04.sql  cv05.sql  cv1.sql  pscr_create.sql
javaI/: partyInfo
std/: bai0033.aux  bai0033.bbl  bai0033.bcf  bai0033.fdb_latexmk  bai0033.fls  bai0033.lof  bai0033.lot  bai0033.out  bai0033.run.xml  bai0033.tex  bai0033.toc
swi/: swi.aux  swi.fdb_latexmk  swi.fls  swi.tex  swi.toc
tamzII/: .gitignore  settings.gradle.kts
via/: VIA.md
zpg/: CMakeLists.txt  README.md
zsu/: ZSU_cv1_introduction_jupyter_pandas_visualization.ipynb  fml_02.ipynb
(+819 files in other folders)
